// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderEndEndRadius renders 0 1`] = `
Array [
  .c0 {
  border-end-end-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders function 1`] = `
Array [
  .c0 {
  border-end-end-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders invalid theme path 1`] = `
Array [
  .c0 {
  border-end-end-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders negative number 1`] = `
Array [
  .c0 {
  border-end-end-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-end-end-radius: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-end-radius: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-end-radius: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-end-radius: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-end-radius: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-end-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-end-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-end-radius: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-end-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-end-radius: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-end-end-radius: July;
}

@media May {
  .c0 {
    border-end-end-radius: August;
  }
}

@media April {
  .c0 {
    border-end-end-radius: September;
  }
}

@media January {
  .c0 {
    border-end-end-radius: November;
  }
}

@media April {
  .c0 {
    border-end-end-radius: August;
  }
}

@media June {
  .c0 {
    border-end-end-radius: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: July;
}

@media May {
  .c0 {
    border-end-end-radius: August;
  }
}

@media April {
  .c0 {
    border-end-end-radius: September;
  }
}

@media January {
  .c0 {
    border-end-end-radius: November;
  }
}

@media April {
  .c0 {
    border-end-end-radius: August;
  }
}

@media June {
  .c0 {
    border-end-end-radius: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-end-end-radius: November;
  }
}

@media April {
  .c0 {
    border-end-end-radius: January;
  }
}

@media January {
  .c0 {
    border-end-end-radius: December;
  }
}

@media April {
  .c0 {
    border-end-end-radius: April;
  }
}

@media June {
  .c0 {
    border-end-end-radius: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-end-end-radius: November;
  }
}

@media April {
  .c0 {
    border-end-end-radius: January;
  }
}

@media January {
  .c0 {
    border-end-end-radius: December;
  }
}

@media April {
  .c0 {
    border-end-end-radius: April;
  }
}

@media June {
  .c0 {
    border-end-end-radius: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-end-end-radius: July;
  }
}

@media April {
  .c0 {
    border-end-end-radius: August;
  }
}

@media January {
  .c0 {
    border-end-end-radius: September;
  }
}

@media April {
  .c0 {
    border-end-end-radius: November;
  }
}

@media June {
  .c0 {
    border-end-end-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-end-end-radius: July;
  }
}

@media April {
  .c0 {
    border-end-end-radius: August;
  }
}

@media January {
  .c0 {
    border-end-end-radius: September;
  }
}

@media April {
  .c0 {
    border-end-end-radius: November;
  }
}

@media June {
  .c0 {
    border-end-end-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-end-end-radius: January;
  }
}

@media April {
  .c0 {
    border-end-end-radius: December;
  }
}

@media January {
  .c0 {
    border-end-end-radius: April;
  }
}

@media April {
  .c0 {
    border-end-end-radius: May;
  }
}

@media June {
  .c0 {
    border-end-end-radius: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-end-end-radius: January;
  }
}

@media April {
  .c0 {
    border-end-end-radius: December;
  }
}

@media January {
  .c0 {
    border-end-end-radius: April;
  }
}

@media April {
  .c0 {
    border-end-end-radius: May;
  }
}

@media June {
  .c0 {
    border-end-end-radius: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders postitive number 1`] = `
Array [
  .c0 {
  border-end-end-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders string 1`] = `
Array [
  .c0 {
  border-end-end-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndEndRadius renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderEndEndRadius renders valid theme path 1`] = `
Array [
  .c0 {
  border-end-end-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-end-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
